--- a/index.html
+++ b/index.html
@@ -536,8 +536,9 @@
     <div class="right-panel">
       <p>[AD | โฆษณา]</p>
       <img src="./scr/ads-banner/ads-banner1.png" alt="Ad" class="ad-image">
-      <img src="./scr/ads-banner/ads-banner2.png" alt="Ad" class="ad-image">
-      <img src="./scr/ads-banner/ads-banner3.png" alt="Ad" class="ad-image">
+      <img src="./scr/ads-banner/ads-banner2.png" alt="Ad" class="ad-image2">
+      <img src="./scr/ads-banner/ads-banner3.png" alt="Ad" class="ad-image3">
+      <img src="./scr/ads-banner/ads-banner4.png" alt="Ad" class="ad-image4">
     </div>
   </div>
 
