--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
       <div class="logo">
         <img src="./scr/img/SAKDEEGo.png" alt="Logo">
       </div>
-      <nav>
-        <a href="index.html" class="active">Home</a>
-        <a href="#">About Us</a>
-      </nav>
     </div>
   </header>
 
@@ -529,15 +525,16 @@
           </circle>
         </g>
       </svg>
+      <div class="tooltip" id="tooltip"></div>
     </div>
-    <div class="tooltip" id="tooltip"></div>
+    
 
     <!-- ฝั่งที่ 3: ภาพโฆษณา -->
     <div class="right-panel">
       <p>[AD | โฆษณา]</p>
-      <img src="./scr/ads-banner/ads-banner1.png" alt="Ad" class="ad-image">
-      <img src="./scr/ads-banner/ads-banner2.png" alt="Ad" class="ad-image2">
-      <img src="./scr/ads-banner/ads-banner3.png" alt="Ad" class="ad-image3">
+      <img class="ad-image" src="./scr/ads-banner/ads-banner1.png" alt="Ad" >
+      <img class="ad-image" src="./scr/ads-banner/ads-banner2.png" alt="Ad" >
+      <img class="ad-image" src="./scr/ads-banner/ads-banner3.png" alt="Ad" >
     </div>
   </div>
 
