Update stupid media reponstive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -20,7 +22,9 @@
         <img src="./scr/img/SAKDEEGo.png" alt="Logo">
       </div>
     </div>
-  </header>
+             
+</header>
+
 
   <!-- =========================
        MAIN CONTENT
